# GrubGroup

./: .gitignore  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json
backend/: .env.example  README.md  (+2 more)
backend/ai_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
backend/ai_service/app/: main.py
backend/ai_service/app/ai/: geo.py  hours.py  taxonomy.py
backend/ai_service/app/ai/agents/: conversation_agent.py  orchestrator_agent.py  preference_agent.py
backend/ai_service/app/ai/graph/: pipeline.py  state.py
backend/ai_service/app/api/: deps.py
backend/ai_service/app/core/: config.py  exceptions.py  logging.py  security.py
backend/ai_service/app/crud/: base.py  message.py  recommendation.py  restaurant.py  session.py  user.py
backend/ai_service/app/db/: base.py  init_db.py  session.py
backend/ai_service/app/models/: __init__.py  enums.py  group.py  menu_item.py  message.py  profile.py  qa.py  recommendation.py  recommendation_item.py  restaurant.py  session.py  session_member.py  timestamps.py  user.py
backend/ai_service/app/schemas/: ai.py  common.py  menu_item.py  profile.py  restaurant.py  session.py  user.py  voice.py
backend/ai_service/app/services/: geocode.py  message_service.py  profile_service.py  recommendation_service.py  restaurant_service.py  session_service.py
backend/ai_service/scripts/: analyze_turn_demo.py  backfill_embeddings.py  demo_orchestrator.py  interactive_session.py  live_http_gateway_e2e.py  reset_db.py  seed_restaurants.py  smoke_orchestrator.py
(+249 files in other folders)
